--- a/secciones/craneal.html
+++ b/secciones/craneal.html
@@ -70,7 +70,9 @@
         <br><br>
 
         <h3>Osteopatía craneal. Pilar frontonasal y relaciones viscerales.</h3>
-        <iframe src="//sendvid.com/embed/xafd8osw" frameborder="0" allowfullscreen></iframe>
+        <div class="flex_video">
+            <iframe src="//sendvid.com/embed/xafd8osw" frameborder="0" allowfullscreen></iframe>
+        </div>
 
     </main>
 
