--- a/secciones/craneal.html
+++ b/secciones/craneal.html
@@ -61,17 +61,14 @@
 
         <h3>Terapia Craneosacral</h3>
         <div class="flex_video">
-            <video class="video" id="video" controls>
-                <source src="//sendvid.com/embed/xafd8osw.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+            <iframe src="//sendvid.com/embed/xafd8osw" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <br><br>
 
         <h3>Osteopatía craneal. Pilar frontonasal y relaciones viscerales.</h3>
         <div class="flex_video">
-            <iframe src="//sendvid.com/embed/xafd8osw" frameborder="0" allowfullscreen></iframe>
+            <iframe src="//sendvid.com/embed/07rncqpi" frameborder="0" allowfullscreen></iframe>
         </div>
 
     </main>
