--- a/secciones/craneal.html
+++ b/secciones/craneal.html
@@ -61,7 +61,7 @@
 
         <h3>Terapia Craneosacral</h3>
         <div class="flex_video">
-            <iframe src="//sendvid.com/embed/xafd8osw" frameborder="0" allowfullscreen></iframe>
+            <iframe src="//sendvid.com/embed/thll6idn" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <br><br>
@@ -76,8 +76,6 @@
     <footer class="footer">
         <p class="footer__texto">Osteopatiapp - Todos los derechos reservados 2022.</p>
     </footer>
-
-    <script src="../js/video.js"></script>
 
 </body>
 
