--- a/especialidades/secciones/adultos/esguince.html
+++ b/especialidades/secciones/adultos/esguince.html
@@ -84,6 +84,16 @@
             adherencias, atrofia muscular, alteración de la movilidad, propiocepción, etc, de hecho, las primeras
             48h post esguince marcarán en gran medida la evolución que éste tendrá en el tiempo.</h3>
 
+        <br><br>
+
+        <h3>Diagnóstico y abordaje osteopático del esguince de tobillo</h3>
+
+        <br><br>
+
+        <h3>Tratamiento osteopático del esquince de tobillo</h3>
+
+        <br><br>
+
     </main>
 
     <footer class="footer">
