--- a/especialidades/secciones/pediatria/displacia.html
+++ b/especialidades/secciones/pediatria/displacia.html
@@ -49,10 +49,10 @@
         <br>
 
         <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="../../../video/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+            <iframe
+                src="https://player.vimeo.com/video/781342112?h=c4eaaae33b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tramientosPediatrica_QueEsDisplacia.mp4"></iframe>
         </div> <br>
         <br>
         <h3>¿Cómo se diagnostica?</h3>
@@ -105,22 +105,11 @@
         </ul>
         <br>
 
-        <h3>Trataimento</h3>
+        <h3>¿Qué es displacia?</h3>
 
         <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="../../../video/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+
         </div> <br> <br>
-
-        <h3>Tratamiento con el cojín de Frelka</h3>
-        <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="../../../video/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
-        </div>
 
     </main>
 
