--- a/especialidades/secciones/pediatria/reflejos.html
+++ b/especialidades/secciones/pediatria/reflejos.html
@@ -102,10 +102,9 @@
         <h3>Reflejos que debe presentar el bebé</h3>
 
         <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="../../../video/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+            <iframe
+                src="https://player.vimeo.com/video/781342114?h=c817d4a38a&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
 
