--- a/secciones/craneal.html
+++ b/secciones/craneal.html
@@ -59,16 +59,21 @@
             Mejorando de esta manera la circulación y el estado general del individuo.</p>
         <br><br>
 
-        <h3>Terapia Craneosacral</h3>
+        <h3>Terapia Craneosacral Biointegrativa</h3>
         <div class="flex_video">
-            <iframe src="//sendvid.com/embed/thll6idn" frameborder="0" allowfullscreen></iframe>
+            <iframe
+                src="https://player.vimeo.com/video/781340431?h=f2e0fea6aa&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tratamientosCraneal_craneosacral"></iframe>
         </div>
 
         <br><br>
 
         <h3>Osteopatía craneal. Pilar frontonasal y relaciones viscerales.</h3>
         <div class="flex_video">
-            <iframe src="//sendvid.com/embed/07rncqpi" frameborder="0" allowfullscreen></iframe>
+            <iframe
+                src="https://player.vimeo.com/video/781340831?h=bb4248961a&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                title="tratamientosCraneal_pilar"></iframe>
         </div>
 
     </main>
