--- a/secciones/estructural.html
+++ b/secciones/estructural.html
@@ -57,21 +57,19 @@
 
         <h3>Tratamiento estructural</h3>
 
-        <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="https://creative-moonbeam-09753b.netlify.app/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+        <div class="flex_video">
+            <iframe <iframe
+                src="https://player.vimeo.com/video/781341346?h=0976d3d793&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
         <br><br>
 
-        <h3>Tratamiento Dolor en el hombro</h3>
-        <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="https://creative-moonbeam-09753b.netlify.app/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+        <h3>Tratamiento Osteopático estructural general</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781341001?h=83310621f5&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
     </main>
