--- a/secciones/pediatrica.html
+++ b/secciones/pediatrica.html
@@ -58,12 +58,11 @@
             del niño para incidir de forma sutil, suave y nada agresiva.</p>
         <p>La edad para poder acudir al osteópata es desde su primera semana de vida, cuanto antes se inicie la
             atención, habrá mayor éxito en la terapia y menor número de sesiones a las que tenga que acudir.</p>
+        <br><br>
 
-        <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="https://creative-moonbeam-09753b.netlify.app/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+        <h3>Reflejos primitivos</h3>
+        <div class="flex_video">
+            <iframe src="//sendvid.com/embed/yyavzt26" frameborder="0" allowfullscreen></iframe>
         </div>
 
     </main>
