--- a/secciones/visceral.html
+++ b/secciones/visceral.html
@@ -64,12 +64,43 @@
         <p>Con la osteopatía visceral podemos tratar con éxito hernias de hiato, dismenorreas, amenorreas, adherencias
             intestinales, estreñimiento crónico, reflujo gastroesfágico, aerofagia, aerocolia, retenciones linfáticas e
             incluso problemas de tensión arterial.</p>
+        <br><br>
 
-        <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="https://creative-moonbeam-09753b.netlify.app/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+        <h3>Tratamiento para intestino y motilidad osteopática visceral</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781342223?h=dd51864fff&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tratamientosVisceral_Intestino Y Motilidad Osteop&amp;aacute;tica Visceral"></iframe>
+        </div>
+
+        <br><br>
+
+        <h3>Tratamiento osteopático visceral y motilidad</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781342633?h=7a7764d6ab&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tratamientosVisceral_visceral"></iframe>
+        </div>
+
+        <br><br>
+
+        <h3>Motilidad Hepática</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781342303?h=a4c50b48af&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tratamientosVisceral_Motilidad Hep&amp;aacute;tica"></iframe>
+        </div>
+
+        <br><br>
+
+        <h3>Osteopatía para el sistema digestivo (Parte 2)</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781342582?h=a1ea700999&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
     </main>
