--- a/especialidades/secciones/pediatria/displacia.html
+++ b/especialidades/secciones/pediatria/displacia.html
@@ -73,7 +73,14 @@
         </ul>
 
         <p>Siempre que la exploración es patológica o siempre que existan tres o más factores de riesgo en un recién
-            nacido, exploramos la cadera mediante una ecografía.</p> <br>
+            nacido, exploramos la cadera mediante una ecografía.</p>
+
+        <div class="flex_video contenedor">
+            <iframe
+                src="https://player.vimeo.com/video/781341993?h=99e618a6b4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tramientosPediatrica_displacia"></iframe>
+        </div> <br> <br>
 
 
         <h3>¿Que tratamiento es posible?</h3>
@@ -105,11 +112,7 @@
         </ul>
         <br>
 
-        <h3>¿Qué es displacia?</h3>
 
-        <div class="flex_video contenedor">
-
-        </div> <br> <br>
 
     </main>
 
