--- a/secciones/visceral.html
+++ b/secciones/visceral.html
@@ -74,7 +74,7 @@
                 title="tratamientosVisceral_Intestino Y Motilidad Osteop&amp;aacute;tica Visceral"></iframe>
         </div>
 
-        <br><br>
+        <br>
 
         <h3>Tratamiento osteopático visceral y motilidad</h3>
         <div class="flex_video">
@@ -84,7 +84,7 @@
                 title="tratamientosVisceral_visceral"></iframe>
         </div>
 
-        <br><br>
+        <br>
 
         <h3>Motilidad Hepática</h3>
         <div class="flex_video">
@@ -94,7 +94,17 @@
                 title="tratamientosVisceral_Motilidad Hep&amp;aacute;tica"></iframe>
         </div>
 
-        <br><br>
+
+        <br>
+
+        <h3>Osteopatía para el sistema digestivo (Parte 1)</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781342402?h=81b310d7b3&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
+
+        <br>
 
         <h3>Osteopatía para el sistema digestivo (Parte 2)</h3>
         <div class="flex_video">
