--- a/secciones/pediatrica.html
+++ b/secciones/pediatrica.html
@@ -60,9 +60,19 @@
             atención, habrá mayor éxito en la terapia y menor número de sesiones a las que tenga que acudir.</p>
         <br><br>
 
-        <h3></h3>
+        <h3>Tratamiento Craneal del neonato</h3>
         <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781341822?h=c95af49a28&badge=0&autopause=0&player_id=0&app_id=58479/embed"></iframe>
+        </div>
+        <br><br>
 
+        <h3>Sesión de osteopatía infantil para el cólico del lactante</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781341582?h=053f45ff5b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="tramientosPediatrica_ColicoDelLactante"></iframe>
         </div>
 
     </main>
