--- a/install.html
+++ b/install.html
@@ -53,7 +53,7 @@
         </div>
         <!--.nosotros-->
         <div>
-            <button id="installButton" class="formulario__submit" type="button" name="button">Instalar</button>
+            <button id="installButton" class="boton_tratamiento" type="button" name="button">Instalar</button>
         </div>
 
     </main>
