--- a/especialidades/secciones/adultos/esguince.html
+++ b/especialidades/secciones/adultos/esguince.html
@@ -87,11 +87,21 @@
         <br><br>
 
         <h3>Diagnóstico y abordaje osteopático del esguince de tobillo</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781358504?h=ab6c1d1715&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="seccionesAdultos_Diagn&amp;oacute;stico Y Abordaje Osteop&amp;aacute;tico Del Esguince De Tobillo.mp4"></iframe>
+        </div>
 
         <br><br>
 
         <h3>Tratamiento osteopático del esquince de tobillo</h3>
-
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781358881?h=196a763b65&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
         <br><br>
 
     </main>
