--- a/especialidades/secciones/pediatria/displacia.html
+++ b/especialidades/secciones/pediatria/displacia.html
@@ -110,7 +110,16 @@
             </li>
             <li> <span>Los resultados son muy buenos, si se trata lo mas precoz posible.</span> </li>
         </ul>
-        <br>
+        <br> <br>
+
+        <h3>Tratamiento</h3>
+
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781364413?h=85b685acbd&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="Ejercicios displasia de cadera ni&amp;ntilde;os.mp4"></iframe>
+        </div>
 
 
 
