--- a/especialidades/secciones/pediatria/paralisis.html
+++ b/especialidades/secciones/pediatria/paralisis.html
@@ -72,15 +72,14 @@
             <li>Ausencia de reflejo de prensión y reflejo de moro asimétrico</li>
             <li>Bóveda abdominal</li>
             <li>Cambio de temperatura o coloración de la piel</li>
-        </ul> <br><br>
+        </ul> <br>
 
         <h3>Tratamiento</h3>
 
         <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="../../../video/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+            <iframe
+                src="https://player.vimeo.com/video/781363585?h=f0034a21ed&title=0&byline=0&portrait=0&speed=0&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
 
