--- a/especialidades/secciones/pediatria/craneal.html
+++ b/especialidades/secciones/pediatria/craneal.html
@@ -66,16 +66,14 @@
 
         <p>Por ejemplo, una compresión en el agujero rasgado posterior (entre los huesos occipital y temporal) por donde
             sale el nervio responsable de las funciones neurovegetativas digestivas, el nervio vago, puede alterar la
-            función digestiva y ser causa de náuseas, reflujo, estreñimiento y cólicos.</p> <br>
+            función digestiva y ser causa de náuseas, reflujo, estreñimiento y cólicos.</p> <br> <br>
 
-        <h3>Tratamiento</h3>
-
-        <div class="flex_video contenedor">
-            <video id="video" controls>
-                <source src="../../../video/video.mp4" type="video/mp4">
-                Tu navegador no soporta los vídeos de HTML5
-            </video>
+        <h3>Tratamiento Craneal del neonato</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781341822?h=c95af49a28&badge=0&autopause=0&player_id=0&app_id=58479/embed"></iframe>
         </div>
+        <br><br>
 
 
 
