--- a/especialidades/secciones/adultos/tendinitis.html
+++ b/especialidades/secciones/adultos/tendinitis.html
@@ -77,6 +77,16 @@
             ejercicios y estiramientos de contracción excéntrica. Además, disponemos de electroterapia, que se puede
             utilizar como tratamiento secundario para aliviar el dolor y la sobrecarga muscular, y nos sirve de gran
             ayuda tanto en la fase aguda como en la crónica.</p>
+        <br><br>
+
+        <h3>Tratamiento</h3>
+
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781368425?h=e7f93fda9d&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="Tratamiento Tendinitis"></iframe>
+        </div>
 
 
     </main>
