--- a/especialidades/secciones/adultos/mareos.html
+++ b/especialidades/secciones/adultos/mareos.html
@@ -69,6 +69,12 @@
         <br><br>
 
         <h3>Tratamiento</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781370200?h=95306dda9e&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="Tratamiento Mareos"></iframe>
+        </div>
 
     </main>
 
