--- a/especialidades/secciones/adultos/tendinitis.html
+++ b/especialidades/secciones/adultos/tendinitis.html
@@ -43,40 +43,20 @@
             fuerza generada en los músculos hacia los huesos, produciéndose el movimiento articular. Los tendones son
             capaces de resistir altas fuerzas de tensión pero tienen una capacidad de elongación limitada.</p>
 
-        <p>Las tendinopatías son un motivo de consulta muy común en las clínicas de fisioterapia y suelen estar
-            relacionadas con la práctica deportiva intensa, aunque también con actividades laborales o recreativas.</p>
+        <p>El supraespinoso es un músculo de forma triangular que se origina en la fosa supraespinosa de la escápula, su
+            tendón pasa por debajo del acromion y se fija en la punta de la tuberosidad mayor del húmero. Es un músculo
+            profundo que está cubierto en gran parte por el trapecio, por lo que es de difícil accesibilidad palpatoria.
+        </p>
 
-        <p>Por citar algunas de las tendinopatías más frecuentes podemos nombrar: Tendinopatía rotuliana, Tendinopatía
-            del Aquiles, Epicondilitis, Pubalgia y Tendinopatía del Supraespinoso.</p>
+        <p>Debido a que discurre por un canal muy estrecho, aprovecha la bolsa subdeltoidea (la cual está encima de su
+            tendón) para no rozar con el acromion.</p>
 
-        <p>Las tendinopatías son el conjunto de patologías que afectan a la estructura tendinosa (tendón). Se producen
-            por un exceso de carga o tensión en los tendones. Esto provoca microtraumatismos que van debilitando las
-            estructuras tendinosas (células, fibras, matriz extracelular, vasos) y llevan a una lesión por sobreuso,
-            sobreesfuerzo o crónicas. El exceso de carga puede ser un esfuerzo repetitivo, un estiramiento excesivo del
-            músculo o malas posturas mantenidas.</p>
+        <p>Su función es la de abductor, es decir de separación del brazo con respecto al tronco.</p>
 
-        <p>Clásicamente, la mayoría de las tendinopatías han sido mal llamadas tendinitis; no obstante, desde hace unos
-            años multitud de autores han empezado a cambiar la utilización de dicha terminología, atendiendo a los
-            resultados en anatomía patológica. La tendinitis propiamente dicha alude a una situación de predominio
-            inflamatorio, como ocurre en lesiones agudas de tipo traumático.</p>
-        <br><br>
-
-        <h3>Prevención y tratamiento</h3>
-
-        <p>La prevención en fisioterapia juega, sin duda, un papel muy importante en este tipo de lesiones. Para
-            evitarlas, se deben controlar las cargas de trabajo y evitar sobrepasar el límite del tendón. Técnicas como
-            el masaje de descarga o descontracturante, la aplicación de hielo y el estiramiento suave tras el ejercicio
-            o actividad son medidas que pueden ayudar a evitar una tendinopatía. Además, en ocasiones es necesario
-            realizar un vendaje funcional o taping, y podemos aconsejar férulas para evitar la sobrecarga de los
-            tendones durante la actividad (deportiva o laboral).</p>
-
-        <p>En el caso que la lesión ya exista, como fisioterapeutas y osteópatas evaluamos al paciente y desarrollamos
-            un plan de tratamiento que comienza de inmediato, en las primeras 24-48 horas, ya que este primer momento es
-            muy importante para evitar complicaciones posteriores. Se ha demostrado que es beneficioso para la
-            recuperación del tendón lesionado el fortalecimiento muscular progresivo, la corrección postural y los
-            ejercicios y estiramientos de contracción excéntrica. Además, disponemos de electroterapia, que se puede
-            utilizar como tratamiento secundario para aliviar el dolor y la sobrecarga muscular, y nos sirve de gran
-            ayuda tanto en la fase aguda como en la crónica.</p>
+        <p>El supraespinoso forma parte de lo que se conoce como manguito de los rotadores, y hace referencia al
+            conjunto de músculos y tendones conectan la escápula con la cabeza del húmero, cumpliendo la importante
+            función de mantener y estabilizar esta cabeza dentro de la cavidad glenoidea de la escápula durante los
+            movimientos del hombro.</p>
         <br><br>
 
         <h3>Tratamiento</h3>
