--- a/especialidades/secciones/adultos/fascitis.html
+++ b/especialidades/secciones/adultos/fascitis.html
@@ -59,6 +59,12 @@
 
         <h3>Tratamiento</h3>
 
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781372640?h=c0cf8df7c6&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
+
     </main>
 
     <footer class="footer">
