--- a/especialidades/secciones/ginecologia/cesarea.html
+++ b/especialidades/secciones/ginecologia/cesarea.html
@@ -46,6 +46,24 @@
             superficial que es la parte que se ve , como a nivel profundo. Con mayor razón las que alcancen órganos
             internos, ya que la rigidez del nuevo tejido que forma la cicatriz puede dar problemas de movilidad, dolor y
             de sensibilidad incluso meses después de haberse producido la cirugía.</p>
+        <br><br>
+
+        <h3>Masaje para la cesárea</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781500033?h=c920794931&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="Masaje Cicatriz.mp4"></iframe>
+        </div>
+        <br><br>
+
+        <h3>Masaje para aliviar el dolor y mejorar el aspecto de la cicatriz</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781522951?h=898501bede&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="CES&amp;Aacute;REA  ALIVIA TU DOLOR Y MEJORA SU ASPECTO.mp4"></iframe>
+        </div>
 
 
     </main>
