--- a/especialidades/secciones/ginecologia/preparacion.html
+++ b/especialidades/secciones/ginecologia/preparacion.html
@@ -74,10 +74,12 @@
         </ul>
         <br><br>
 
-        <h3>Tratamiento</h3>
-        <p></p>
-        <p></p>
-        <p></p>
+        <h3>Ejercicios</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781506427?h=a0c567ffdd&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
 
     </main>
 
