--- a/especialidades/secciones/ginecologia/postparto.html
+++ b/especialidades/secciones/ginecologia/postparto.html
@@ -65,7 +65,12 @@
             vagina ocasionando molestias como: sensación de peso, aparición de “bultos” que asoman por vagina, dolor con
             en las relaciones sexuales y erosiones en la mucosa vaginal expuesta.</p> <br> <br>
 
-        <h3>Tratamiento:</h3>
+        <h3>Ejercicios</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781527150?h=0cf7b07bd1&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
 
 
 
