--- a/especialidades/secciones/deportiva/epicondilitis.html
+++ b/especialidades/secciones/deportiva/epicondilitis.html
@@ -77,6 +77,14 @@
                 provocan la enfermedad.</li>
             <li>Cirugía. Está recomendada en ciertos casos que no responden a ninguna de las medidas anteriores.</li>
         </ul>
+        <br><br>
+        <h3>Tratamiento</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781540625?h=9e341d5acd&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                title="epicondilitis.mp4"></iframe>
+        </div>
 
     </main>
 
