--- a/especialidades/secciones/deportiva/hipopresiva.html
+++ b/especialidades/secciones/deportiva/hipopresiva.html
@@ -95,6 +95,14 @@
                 horas o varios días, pero su efectividad hace de ella una técnica de elección en contracturas que
                 persisten en el tiempo.</p>
         </ul>
+        <br><br>
+
+        <h3>Terapia Hipopresiva</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781558825?h=da53abf9ac&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
 
     </main>
 
