--- a/osteopatia.html
+++ b/osteopatia.html
@@ -52,10 +52,10 @@
             </div>
             <!--.nosotros__contenido-->
             <div class="video">
-                <video id="video" controls autoplay="true">
-                    <source src="https://osteopatiapp.webcindario.com/vids/nosotros.mp4" type="video/mp4">
-                    Tu navegador no soporta los vídeos de HTML5
-                </video>
+                <iframe
+                    src="https://player.vimeo.com/video/781532970?h=a6c07866f0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    title="nosotros.mp4"></iframe>
             </div>
         </div>
         <!--.nosotros-->
