--- a/especialidades/secciones/deportiva/puncion.html
+++ b/especialidades/secciones/deportiva/puncion.html
@@ -65,7 +65,44 @@
 
             Esta técnica combinada con otras técnicas de terapia manual, representa una de las técnicas más eficaces
             para el tratamiento de los puntos gatillo.</p>
+
+
+        <h3>Tipos</h3>
+        <ul>
+            <li>Puncion seca superficial: </li>
+            <p>Consiste en la introducción de la aguja en la piel y en el tejido
+                celular subcutáneo que recubren el punto gatillo a una profundidad máxima de 1 cm, sin llegar a penetrar
+                en el músculo, se mantiene puesta aproximadamente 15 min durante los cuales se puede manipular con el
+                fin de provocar algún estímulo doloroso en el paciente.</p>
+
+            <p>Después, de la punción superficial realizaremos un tratamiento conservador sobre el punto gatillo, ya que
+                consigue elevar el umbral del dolor, lo que va a permitir trabajar con más facilidad sobre el punto
+                gatillo..</p>
+
+            <li>Punción seca profunda:</li>
+            <p>Es la punción de los puntos gatillos situados en los músculos más profundos, por lo que las agujas serán
+                introducidas hasta llegar a ellos. Una vez la aguja se encuentra dentro del punto gatillos se estimula
+                de diferentes maneras: introduciendo y retirando la aguja rápidamente, haciendo barridos, girando la
+                aguja…. Todo ello con el fin de provocar una respuesta de espasmo local o contracción involuntaria, que
+                es lo que finalmente relajara la musculatura</p>
+
+            <p>Después de realizar la punción ( puede durar no mas de 5 min) hay que completar el tratamiento con
+                estiramientos, masajes, contracciones musculares…..para mejorar la efectividad de la técnica. </p>
+
+            <p>Es una técnica ligeramente dolorosa en el momento y puede persistir dolor post-punción durante unas
+                horas o varios días, pero su efectividad hace de ella una técnica de elección en contracturas que
+                persisten en el tiempo.</p>
+        </ul>
     </main>
+    <br><br>
+
+    <h3>Terapia Hipopresiva</h3>
+    <div class="flex_video">
+        <iframe
+            src="https://player.vimeo.com/video/781564202?h=514ec01d93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Puncion"></iframe>
+    </div>
+
 
     <footer class="footer">
         <p class="footer__texto">Osteopatiapp - Todos los derechos reservados 2022.</p>
