--- a/secciones/estructural.html
+++ b/secciones/estructural.html
@@ -72,6 +72,15 @@
                 allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
+        <br><br>
+        <h3>Terapia para dolor a nivel dorsal y zona cervical</h3>
+        <div class="flex_video">
+            <iframe
+                src="https://player.vimeo.com/video/781558825?h=da53abf9ac&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+        </div>
+
+
     </main>
 
     <footer class="footer">
