--- a/especialidades/secciones/deportiva/hipopresiva.html
+++ b/especialidades/secciones/deportiva/hipopresiva.html
@@ -71,12 +71,13 @@
 
         <br><br>
 
-        <h3>Terapia Hipopresiva</h3>
+        <h3>Gimnasia Hipopresiva para principiantes</h3>
         <div class="flex_video">
-            <iframe
-                src="https://player.vimeo.com/video/781558825?h=da53abf9ac&badge=0&autopause=0&player_id=0&app_id=58479/embed"
-                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
+
         </div>
+
+        <br><br>
+
 
     </main>
 
