--- a/especialidades/secciones/deportiva/hipopresiva.html
+++ b/especialidades/secciones/deportiva/hipopresiva.html
@@ -73,7 +73,9 @@
 
         <h3>Gimnasia Hipopresiva para principiantes</h3>
         <div class="flex_video">
-
+            <iframe
+                src="https://player.vimeo.com/video/781573769?h=d4a914d94b&badge=0&autopause=0&player_id=0&app_id=58479/embed"
+                allow="autoplay; fullscreen; picture-in-picture" allowfullscreen frameborder="0"></iframe>
         </div>
 
         <br><br>
