--- a/osteopatia.html
+++ b/osteopatia.html
@@ -52,7 +52,7 @@
             </div>
             <!--.nosotros__contenido-->
             <div class="video">
-                <iframe
+                <iframe class="video_nosotros"
                     src="https://player.vimeo.com/video/781532970?h=a6c07866f0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
                     frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
                     title="nosotros.mp4"></iframe>
