--- a/osteopatia.html
+++ b/osteopatia.html
@@ -52,7 +52,7 @@
             </div>
             <!--.nosotros__contenido-->
             <div class="video">
-                <video src="video/nosotros.mp4" width="640" height="480" autoplay controls></video>
+                <video src="video/nosotros.mp4" autoplay controls></video>
             </div>
             <!--.nosotros-->
     </main>
