--- a/install.html
+++ b/install.html
@@ -40,14 +40,9 @@
         <h1>¿Cómo instalar nuestra App?</h1>
         <div>
             <div>
-                <p class="parrafo_nosotros">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget
-                    aliquam mi. Ut ornare dignissim
-                    justo in consequat. Aliquam hendrerit vehicula ipsum, ac sagittis ex laoreet id. Nullam aliquet
-                    justo quis ipsum efficitur, eget
-                    efficitur risus posuere. Integer pretium efficitur arcu ac pellentesque. Suspendisse eleifend urna
-                    non libero porta, eget ornare
-                    lorem scelerisque. In sollicitudin, felis et mattis sagittis, risus purus efficitur nisl, in feugiat
-                    est sapien eu urna.</p>
+                <p class="parrafo_nosotros">Instalar es muy fácil. No requieres de ninguna tienda de aplicaciones,
+                    simplemente toca el botón y se creará el ícono de nuestra app para que puedas acceder a ella
+                    directamente.</p>
             </div>
             <!--.nosotros__contenido-->
         </div>
