--- a/especialidades/secciones/deportiva/puncion.html
+++ b/especialidades/secciones/deportiva/puncion.html
@@ -96,7 +96,7 @@
     </main>
     <br><br>
 
-    <h3>Terapia Hipopresiva</h3>
+    <h3>Tratamiento</h3>
     <div class="flex_video">
         <iframe
             src="https://player.vimeo.com/video/781564202?h=514ec01d93&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
