--- a/osteopatia.html
+++ b/osteopatia.html
@@ -64,22 +64,22 @@
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
                 <h3 class="bloque__titulo">No tiene costo.</h3>
-                <p>Quisque fermentum dolor ac tempus volutpat. Nulla euismod sagittis metus vel luctus.</p>
+                <p>No te vamos a cobrar por su uso ni vamos a integrar publicidad..</p>
             </div> <!-- .bloque -->
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
                 <h3 class="bloque__titulo">Fácil y rápida.</h3>
-                <p>Quisque fermentum dolor ac tempus volutpat. Nulla euismod sagittis metus vel luctus.</p>
+                <p>No requiere permisos adicionales ni descargar nada pesado.</p>
             </div> <!-- .bloque -->
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
                 <h3 class="bloque__titulo">Instalable.</h3>
-                <p>Quisque fermentum dolor ac tempus volutpat. Nulla euismod sagittis metus vel luctus.</p>
+                <p>Si lo prefieres puedes instalarla.</p>
             </div> <!-- .bloque -->
             <div class="bloque">
                 <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
                 <h3 class="bloque__titulo">No necesita sus datos.</h3>
-                <p>Quisque fermentum dolor ac tempus volutpat. Nulla euismod sagittis metus vel luctus.</p>
+                <p>Sin necesidad de iniciar sesión o crear un registro.</p>
             </div> <!-- .bloque -->
         </div> <!-- .bloques -->
 
