--- a/install.html
+++ b/install.html
@@ -47,7 +47,7 @@
             <!--.nosotros__contenido-->
         </div>
         <!--.nosotros-->
-        <div>
+        <div class="centra_boton">
             <button id="installButton" class="boton_tratamiento" type="button" name="button">Instalar</button>
         </div>
 
